# nethack-companion

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  gamemap.cpp  gamemap.h  input_handlers.cpp  input_handlers.h  io.cpp  io.h  main.cpp  menu.cpp  menu.h  playmap.cpp  playmap.h  savefile.cpp  savefile.h  sokoban.cpp  sokoban.h  submenu.cpp  submenu.h  utilities.cpp  utilities.h
.github/workflows/: release.yaml
assets/: desktop.in  edibility.json  items.json  nhc_icon.xpm  prices.json  resources.rc  resources.rc.in
include/: embedded_assets.h  gamemap.h  input_handlers.h  io.h  menu.h  savefile.h  sokoban.h  submenu.h  terminal.h  utilities.h
src/: embedded_assets.cpp.in  gamemap.cpp  input_handlers.cpp  io.cpp  main.cpp  menu.cpp  savefile.cpp  sokoban.cpp  submenu.cpp  terminal.cpp  utilities.cpp
